src/common/static/common/style.css
a,
a:focus,
a:hover {
  color: #fff;
}

html,
body {
  height: 100%;
  background-color: #333;
  margin: 0;
  padding: 0;
}

body {
  display: -ms-flexbox;
  display: flex;
  color: #fff;
  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
}

footer {
  color: rgba(255, 255, 255, 0.5);
}

